--- a/totens.html
+++ b/totens.html
@@ -70,11 +70,13 @@
         <div class="text-center">
           <div class="row">
               <div class="col">
+                <div class="row p-4">
                 <div class="row">
                   <div class="col-sm-4 text-center text-white">
                   <h1 class="p-5 text-dark font-italic">Totens</h1>  
                   <h3 class="p-5 font-italic">Material Toten produzido em MDF,ACM Chapa galvanizada, layout com adesivo fosco impresso em alta resolução .</h3>
                   </div>
+                  <div class="col-sm-8 p-5">
                   <div class="col-sm-8 p-4">
                     <div id="demo" class="carousel slide" data-ride="carousel">
                       <!-- Indicators -->
@@ -92,7 +94,7 @@
                           <img src="totens/totens2.jpg" alt="totens">
                         </div>
                         <div class="carousel-item">
-                          <img src="totens/totens3.jpg" alt="totens">
+                          <img src="totens/totens3.jpeg" alt="totens">
                         </div>
                       </div>
                       <!-- Left and right controls -->
@@ -104,7 +106,6 @@
                       </a>
                     </div>
               </div>
-            
             </div>
       </div>
     </div>
