--- a/totens.html
+++ b/totens.html
@@ -70,14 +70,13 @@
         <div class="text-center">
           <div class="row">
               <div class="col">
+                <div class="row p-2">
                 <div class="row p-4">
-                <div class="row">
                   <div class="col-sm-4 text-center text-white">
                   <h1 class="p-5 text-dark font-italic">Totens</h1>  
                   <h3 class="p-5 font-italic">Material Toten produzido em MDF,ACM Chapa galvanizada, layout com adesivo fosco impresso em alta resolução .</h3>
                   </div>
-                  <div class="col-sm-8 p-5">
-                  <div class="col-sm-8 p-4">
+                  <div class="col-sm-8">
                     <div id="demo" class="carousel slide" data-ride="carousel">
                       <!-- Indicators -->
                       <ul class="carousel-indicators">
@@ -93,7 +92,7 @@
                         <div class="carousel-item">
                           <img src="totens/totens2.jpg" alt="totens">
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item p-4">
                           <img src="totens/totens3.jpeg" alt="totens">
                         </div>
                       </div>
