--- a/totens.html
+++ b/totens.html
@@ -93,7 +93,7 @@
                           <img src="totens/totens2.jpg" alt="totens">
                         </div>
                         <div class="carousel-item p-4">
-                          <img src="totens/totens3.jpeg" alt="totens">
+                          <img src="totens/totens3.jpg" alt="totens">
                         </div>
                       </div>
                       <!-- Left and right controls -->
