--- a/Banner.html
+++ b/Banner.html
@@ -67,7 +67,6 @@
         <div class="text-center">
           <div class="row">
               <div class="col">
-                <div class="row p-5">
                 <div class="row">
                   <div class="col-sm-4 text-center text-white">
                   <h1 class="p-5 text-dark font-italic">Banners</h1>  
@@ -84,16 +83,13 @@
                       <!-- The slideshow -->
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="banner/banner.jpg" alt="Banner">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="banner/banner2.jpg" alt="banner" >
-                        </div>
-                        <div class="carousel-item">
-                          <img src="banner/banner3.jpg" alt="banner" >
+                          <img src="banner/banner.jpg" alt="Los Angeles">
                         </div>
                         <div class="carousel-item">
                           <img src="banner/banner2.jpg" alt="Chicago" >
+                        </div>
+                        <div class="carousel-item">
+                          <img src="banner/banner3.jpg" alt="New York" >
                         </div>
                       </div>
                       <!-- Left and right controls -->
@@ -109,6 +105,8 @@
       </div>
     </div>
   </section>
+ 
+
   <footer class="container-fluid bg-white p-1">
     <div class="container">
       <div class="text-center">
@@ -135,6 +133,9 @@
     </div>
     </div>
   </footer>
+
+
+       
   <div class="whatsapp">
     <a href="https://wa.me/5581998650220?text=Olá,%20gostaria%20de%20mais%20informações">
      <img src="WhatsApp-Android-PNG.png" style="width: 70px;" alt="Fale Conosco pelo whatsapp" title="Fale Conosco pelo whatsapp">
