--- a/Banner.html
+++ b/Banner.html
@@ -67,7 +67,7 @@
         <div class="text-center">
           <div class="row">
               <div class="col">
-                <div class="row">
+                <div class="row p-5">
                   <div class="col-sm-4 text-center text-white">
                   <h1 class="p-5 text-dark font-italic">Banners</h1>  
                   <h3 class="p-5 font-italic">Banner em lona 340gr impresso.Alta resolução com acabamento.</h3>
@@ -83,13 +83,13 @@
                       <!-- The slideshow -->
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="banner/banner.jpg" alt="Los Angeles">
+                          <img src="banner/banner.jpg" alt="banner">
                         </div>
                         <div class="carousel-item">
-                          <img src="banner/banner2.jpg" alt="Chicago" >
+                          <img src="banner/banner2.jpg" alt="banner2">
                         </div>
                         <div class="carousel-item">
-                          <img src="banner/banner3.jpg" alt="New York" >
+                          <img src="banner/banner3.jpg" alt="banner3">
                         </div>
                       </div>
                       <!-- Left and right controls -->
