atualização de pagina

--- a/sobre.html
+++ b/sobre.html
@@ -100,7 +100,7 @@
               </a>
             </div>
             <div class="col text-center">
-              <h4 class="p-2">ONDE NOS ENCONTRA:</h4>
+              <h4 class="p-2">E ONDE NÓS ENCONTRA</h4>
              
               <a class="btn btn-outline-light btn-floating m-1 bg-dark" href="https://wa.me/5581998650220?text=Olá,%20gostaria%20de%20mais%20informações" role="button"><i
                 class="bi bi-whatsapp"></i></a>
