Atualizaçao de letreiros

--- a/letreiros.html
+++ b/letreiros.html
@@ -101,7 +101,19 @@
                           <img src="letreiros/accenture02.jpg" alt="letreiro">
                         </div>
                         <div class="carousel-item">
+                            <img src="letreiros/letreiro05.jpg" alt="letreiro">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="letreiros/fotos 02.jpg" alt="letreiro">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="letreiros/foto 03.jpg" alt="letreiro">
+                          </div>
+                          <div class="carousel-item">
                             <img src="letreiros/letreiro04.jpg" alt="letreiro">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="letreiros/foto 04.jpg" alt="letreiro">
                           </div>
                           
                       </div>
