--- a/totens.html
+++ b/totens.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="Portugues">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
   <title>Quantico</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
-
 <body>
-  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <!-- Logo -->
     <a href="#" class="navbar-brand font-italic">Quantico</a>
@@ -94,6 +89,19 @@
                         <div class="carousel-item">
                           <img src="totens/totens3.jpeg" alt="totens">
                         </div>
+
+
+
+                        <div class="carousel-item">
+                          <img src="totens/foto02.jpg" alt="totens">
+                        </div>
+
+                        <div class="carousel-item">
+                          <img src="totens/foto01.jpg" alt="totens">
+                        </div>
+
+                      
+
                       </div>
                       <!-- Left and right controls -->
                       <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -104,7 +112,6 @@
                       </a>
                     </div>
               </div>
-            
             </div>
       </div>
     </div>
