--- a/placas.html
+++ b/placas.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="Portugues">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -15,9 +13,7 @@
   <title>Quantico</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
-
 <body>
-  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <!-- Logo -->
     <a href="#" class="navbar-brand font-italic">Quantico</a>
@@ -69,7 +65,7 @@
         <div class="text-center">
           <div class="row">
               <div class="col">
-                <div class="row">
+                <div class="row p-3">
                   <div class="col-sm-4 text-center text-white">
                   <h1 class="p-5 text-dark font-italic">Placas</h1>
                   <br>
@@ -96,6 +92,21 @@
                         </div>
                         <div class="carousel-item">
                           <img src="placas/placa05.jpg" alt="placa">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="placas/foto 01.jpg" alt="placa">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="placas/foto2.jpg" alt="placa">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="placas/fot 03.jpg" alt="placa">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="placas/foto 04.jpg" alt="placa">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="placas/foto 05.jpg" alt="placa">
                         </div>
                       </div>
                       <!-- Left and right controls -->
