--- a/adesivo vinil.html
+++ b/adesivo vinil.html
@@ -98,6 +98,15 @@
                         <div class="carousel-item">
                           <img src="adesivo vinil/adesivo05.jpg" alt="veiculos">
                         </div>
+                        <div class="carousel-item">
+                          <img src="adesivo vinil/foto07.jpg" alt="veiculos">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="adesivo vinil/foto08.jpg" alt="veiculos">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="adesivo vinil/foto09.jpg" alt="veiculos">
+                        </div>
                       </div>
                       <!-- Left and right controls -->
                       <a class="carousel-control-prev" href="#demo" data-slide="prev">
