atualizaco das paginas

--- a/fachadas.html
+++ b/fachadas.html
@@ -120,9 +120,7 @@
         <div class="row p-5" id="contato">
             <div class="col">
               <h4 class="text-center p-2">FALE CONOSCO:</h4>
-              <p class="font-italic">Deixem uma mensagem:</p>
-              <p class="font-italic ">
-                Ajude-nos à melhorar,entre em contato , é muito importante para o crescimento da nossa empresa</p>
+              <p class="font-italic">quanticosinalização@gmail.com.br</p>
               <a href="https://wa.me/5581998650220?text=Mensagem de exemplo&subject=Assunto da mensagem&nome=Nome do contato"
                 target="_blank" class="btn btn-success">
                 Entre em Contato
@@ -145,13 +143,6 @@
      <img src="WhatsApp-Android-PNG.png" style="width: 70px;" alt="Fale Conosco pelo whatsapp" title="Fale Conosco pelo whatsapp">
    </a>
    </div>
-        
-
-   
-
-
-
-
   <script type="text/javascript" src="arquivo.js"></script>
 </body>
 
