--- a/index.html
+++ b/index.html
@@ -92,7 +92,16 @@
                 <img src="fachadas/fachda.jpg" alt="fachadas">
               </div>
               <div class="carousel-item">
-                <img src="piso01.jpg" alt="piso">
+                <img src="foto05.jpg" alt="piso">
+              </div>
+              <div class="carousel-item">
+                <img src="foto01.jpg" alt="piso">
+              </div>
+               <div class="carousel-item">
+                <img src="foto08.jpg" alt="piso">
+              </div>
+               <div class="carousel-item">
+                <img src="foto06.jpg" alt="piso">
               </div>
             </div>
             <!-- Left and right controls -->
@@ -112,9 +121,7 @@
         <div class="row p-5" id="contato">
             <div class="col">
               <h4 class="text-center p-2">FALE CONOSCO:</h4>
-              <p class="font-italic">Deixem uma mensagem:</p>
-              <p class="font-italic ">
-                Ajude-nos à melhorar,entre em contato , é muito importante para o crescimento da nossa empresa</p>
+              <p class="font-italic">quanticosinalização@gmail.com.br</p>
               <a href="https://wa.me/5581998650220?text=Mensagem de exemplo&subject=Assunto da mensagem&nome=Nome do contato"
                 target="_blank" class="btn btn-success">
                 Entre em Contato
