--- a/Banner.html
+++ b/Banner.html
@@ -5,13 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
   <title>Quantico</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
@@ -105,17 +103,13 @@
       </div>
     </div>
   </section>
- 
-
   <footer class="container-fluid bg-white p-1">
     <div class="container">
       <div class="text-center">
         <div class="row p-5" id="contato">
             <div class="col">
               <h4 class="text-center p-2">FALE CONOSCO:</h4>
-              <p class="font-italic">Deixem uma mensagem:</p>
-              <p class="font-italic ">
-                Ajude-nos à melhorar,entre em contato , é muito importante para o crescimento da nossa empresa</p>
+              <p class="font-italic">quanticosinalização@gmail.com.br</p>
               <a href="https://wa.me/5581998650220?text=Mensagem de exemplo&subject=Assunto da mensagem&nome=Nome do contato"
                 target="_blank" class="btn btn-success">
                 Entre em Contato
@@ -134,19 +128,11 @@
     </div>
   </footer>
 
-
-       
   <div class="whatsapp">
     <a href="https://wa.me/5581998650220?text=Olá,%20gostaria%20de%20mais%20informações">
      <img src="WhatsApp-Android-PNG.png" style="width: 70px;" alt="Fale Conosco pelo whatsapp" title="Fale Conosco pelo whatsapp">
    </a>
    </div>
-
-   
-
-
-
-
   <script type="text/javascript" src="arquivo.js"></script>
 </body>
 
