--- a/adesivo vinil.html
+++ b/adesivo vinil.html
@@ -10,11 +10,9 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
   <title>Quantico</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
-
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <!-- Logo -->
@@ -127,9 +125,7 @@
         <div class="row p-5" id="contato">
             <div class="col">
               <h4 class="text-center p-2">FALE CONOSCO:</h4>
-              <p class="font-italic">Deixem uma mensagem:</p>
-              <p class="font-italic ">
-                Ajude-nos à melhorar,entre em contato , é muito importante para o crescimento da nossa empresa</p>
+              <p class="font-italic">quanticosinalização@gmail.com.br</p>
               <a href="https://wa.me/5581998650220?text=Mensagem de exemplo&subject=Assunto da mensagem&nome=Nome do contato"
                 target="_blank" class="btn btn-success">
                 Entre em Contato
