atualizacao das paginas

--- a/letreiros.html
+++ b/letreiros.html
@@ -137,14 +137,14 @@
         <div class="row p-5" id="contato">
             <div class="col">
               <h4 class="text-center p-2">FALE CONOSCO:</h4>
-              <p class="font-italic">quanticosinalização@gmail.com.br<p>
+              <p class="font-italic">quanticosinalização@gmail.com<p>
               <a href="https://wa.me/5581998650220?text=Mensagem de exemplo&subject=Assunto da mensagem&nome=Nome do contato"
                 target="_blank" class="btn btn-success">
                 Entre em Contato
               </a>
             </div>
             <div class="col text-center">
-              <h4 class="p-2">E ONDE NÓS ENCONTRA:</h4>
+              <h4 class="p-2">ONDE NÓS ENCONTRAR:</h4>
             
               <a class="btn btn-outline-light btn-floating m-1 bg-dark" href="https://wa.me/5581998650220?text=Olá,%20gostaria%20de%20mais%20informações" role="button"><i
                 class="bi bi-whatsapp"></i></a>
