--- a/fachadas.html
+++ b/fachadas.html
@@ -69,7 +69,7 @@
           <div class="row">
               <div class="col">
                 <div class="row p-4">
-                  <div class="col-sm-4 text-center text-white">
+                  <div class="col-sm-4 text-center text-white p-2">
                   <h1 class="text-dark font-italic p-5">Fachadas ACM</h1>
               
                   <h3 class="font-italic p-4">Fachada produzida em ACM, chapa galvanizada com estrutura metálica em tubos Metalon galvanizados.
@@ -77,7 +77,7 @@
                     Produção conforme projeto apresentado.</h3>
                    
                   </div>
-                  <div class="col-sm-8">
+                  <div class="col-sm-8 p-5">
                     <div id="demo" class="carousel slide" data-ride="carousel">
                       <!-- Indicators -->
                       <ul class="carousel-indicators">
@@ -86,7 +86,7 @@
                         <li data-target="#demo" data-slide-to="2"></li>
                       </ul>
                       <!-- The slideshow -->
-                      <div class="carousel-inner">
+                      <div class="carousel-inner p-3">
                         <div class="carousel-item active">
                           <img src="fachadas/fachda01.jpg" alt="Los Angeles">
                         </div>
