--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="row" id="sobre">
         <div class="col-sm-4 text-center text-white">
         <h4 class="p-5">Quem somos</h4>  
-        <p class="p-5">A Quantico Sinalização é uma empresa dedicada à excelência em fornecer soluções de sinalização para empresas e organizações de todos os tamanhos. 
+        <p class="p-2">A Quantico Sinalização é uma empresa dedicada à excelência em fornecer soluções de sinalização para empresas e organizações de todos os tamanhos. 
           Nosso compromisso é criar um impacto positivo por meio de uma sinalização eficaz e designs inovadores.</p>
           <p class="p-4">
             <strong>Nossos Valores:</strong> Comprometimento com a qualidade, inovação, atendimento ao cliente excepcional e integridade em todas as interações.
@@ -84,7 +84,7 @@
               <li data-target="#demo" data-slide-to="2"></li>
             </ul>
             <!-- The slideshow -->
-            <div class="carousel-inner">
+            <div class="carousel-inner p-4">
               <div class="carousel-item active">
                 <img src="veiculos/veiculos04.jpg" alt="veiculos" >
               </div>
