--- a/sobre.html
+++ b/sobre.html
@@ -104,7 +104,7 @@
                 class="bi bi-whatsapp"></i></a>
             <a class="btn btn-outline-light btn-floating m-1 bg-dark" href="https://www.instagram.com/quantico_sinaliza/" role="button"><i
                 class="bi bi-instagram"></i></a>
-                <p class="p-4">&copy; @Stecnologic.</p>
+                <p class="p-4">&copy; @Stecnologic</p>
               </div>
             </div>
     </div>
