atuazalizacao de email das paginas

--- a/stande.html
+++ b/stande.html
@@ -115,7 +115,7 @@
         <div class="row p-5" id="contato">
             <div class="col">
               <h4 class="text-center p-2">FALE CONOSCO:</h4>
-              <p class="font-italic">quanticosinalização@gmail.com</p>
+              <p class="font-italic">quanticosinalizacao@gmail.com</p>
               <a href="https://wa.me/5581996839491?text=Mensagem de exemplo&subject=Assunto da mensagem&nome=Nome do contato"
                 target="_blank" class="btn btn-success">
                 Entre em Contato
