--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Quantico</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
+  
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
