--- a/letreiros.html
+++ b/letreiros.html
@@ -44,6 +44,9 @@
             <a href="fachadas.html" class="nav-link font-italic">Fachadas</a>
           </li>
           <li class="nav-item">
+            <a href="placas de obra.html" class="nav-link font-italic">Placas de obras</a>
+          </li>
+          <li class="nav-item">
             <a href="letreiros.html" class="nav-link font-italic">Letreiros</a>
           </li>
           <li class="nav-item">
