implementaçao da pagina de placa de obras e suas fotos

--- a/stande.html
+++ b/stande.html
@@ -125,7 +125,7 @@
               </a>
             </div>
             <div class="col text-center">
-              <h4 class="p-2">ONDE NÓS ENCONTRAMOS:</h4>
+              <h4 class="p-2">ONDE NOS ENCONTRAMOS:</h4>
               
             
               <a class="btn btn-outline-light btn-floating m-1 bg-dark" href="https://wa.me/5581996839491?text=Olá,%20gostaria%20de%20mais%20informações" role="button"><i
