--- a/letreiros.html
+++ b/letreiros.html
@@ -118,7 +118,20 @@
                           <div class="carousel-item">
                             <img src="letreiros/accenture 04.jpeg" alt="letreiro">
                           </div>
-                          
+                      
+                          <div class="carousel-item">
+                            <img src="letreiros/letreiro accenture.jpg" alt="letreiro">
+                          </div>
+
+                          <div class="carousel-item">
+                            <img src="letreiros/letreiro nac.jpg" alt="letreiro">
+                          </div>
+
+                          <div class="carousel-item">
+                            <img src="letreiros/letreiro suzano.jpg" alt="letreiro">
+                          </div>
+
+
                       </div>
                       <!-- Left and right controls -->
                       <a class="carousel-control-prev" href="#demo" data-slide="prev">
